Still trying to get after midnight logic right...

--- a/index.html
+++ b/index.html
@@ -116,9 +116,6 @@
                 var asif_time = nowish.getHours().toLocaleString('en-US', { minimumIntegerDigits: 2, useGrouping: false }) + ':' + nowish.getMinutes().toLocaleString('en-US', { minimumIntegerDigits: 2, useGrouping: false });
                 var time_str = (asif_date + ' ' + asif_time).replace(/\s/, 'T');
                 nowish = new Date(time_str);
-                //if we're after midnight, but before 9am, it's yesterday...
-                if ((nowish.getHours()>=0) && (nowish.getHours()<9))
-                    nowish.setDate(nowish.getDate()+1); 
             }
 
             console.log('getnow', nowish, time_str)
@@ -136,8 +133,12 @@
         function setVideo() {
             clearTimeout(callback_timer);
             var nowish_dt = getNow();
+            var nowish_video = getNow();
             var nowish = Date.parse(nowish_dt);
 
+            //if we're after midnight, but before 9am, it's yesterday...
+            if ((nowish_video.getHours()>=0) && (nowish_video.getHours()<9))
+            nowish_video.setDate(nowish.getDate()+1); 
             var vid = '';
             var ts = 0;
             var starting;
@@ -169,9 +170,9 @@
             // find what's on by iterating till we find something
             for (var act of stageLists[stage]) {
                 //console.log('nowish', act, nowish, (new Date(nowish)).toUTCString(), (new Date(act['starting'])).toUTCString())
-                console.log('noiwsh', getNow(), nowish, 'starting', act['starting'], act['ending'], act['start_dt'].toUTCString())
+                console.log('noiwsh', getNow(), nowish_video, 'starting', act['starting'], act['ending'], act['start_dt'].toUTCString())
                 console.log(stage, act['stage'])
-                if (('v' in act) && (nowish >= act['starting']) && (nowish <= act['ending'])) {
+                if (('v' in act) && (nowish_video >= act['starting']) && (nowish_video <= act['ending'])) {
                     console.log('HURRAH', act['starting'])
                     vid = act['v'];
                     if ('t' in act) ts = act['t'];
@@ -186,7 +187,7 @@
 
             if (vid != '') {
                 // calculate offset
-                var time_delta = Math.round((nowish - starting) / 1000);
+                var time_delta = Math.round((nowish_video - starting) / 1000);
                 var start = time_delta + ts;
                 console.log(vid, time_delta, ts)
                 //<iframe width="560" height="315" src="https://www.youtube.com/embed/rZwv_3mcgQk?start=634" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
